[package]
name = "foo"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.6", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"
